syntax = "proto3";

option go_package = "./movie/delivery/grpc/model";

package model;

message Movie {
    string title = 1;
    string year = 2;
    string Rated = 3;
    string Released = 4;
    string Runtime = 5;
    string Genre = 6;
    string Director = 7;
    string Writer = 8;
    string Actors = 9;
    string Plot = 10;
    string Language = 11;
    string Country = 12;
    string Awards = 13;
    string Poster = 14;
	string Metascore = 15;
    string ImdbRating = 16;
    string ImdbVotes = 17;
    string ImdbID = 18;
    string Type = 19;
    string DVD = 20;
    string BoxOffice = 21;
    string Production = 22;
    string Website = 23;
}

message MovieSearch {
    message MovieMetaData {
        string Title = 1;
        string Year = 2;
        string ImdbID = 3;
        string Type = 4;
        string Poster = 5;
    }
    repeated MovieMetaData SearchResult = 1;
    int32 TotalResults = 2;
}

message MovieId {
    string id = 1;
}

message MovieKeywordAndPage {
    string keyword = 1;
    int32 page = 2;
}

service Movies {
    rpc SearchMovies (MovieKeywordAndPage) returns (MovieSearch) {}
    rpc GetMovieDetail (MovieId) returns (Movie) {}
}
